--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <div class="hearty altheart x6"></div>
         </div>
     </div>
+    <footer>
+        <p>&copy:Al Andrie Pilapil
+    </footer>
 </body>
 </html>
 <script>
